--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter_svg: ^2.0.17
   flutter_native_splash: ^2.4.5
+  google_fonts: ^6.2.1
   flutter:
     sdk: flutter
 
@@ -31,6 +32,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/splash/
+    - assets/images/onboarding/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
