--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ flutter:
   assets:
     - assets/images/splash/
     - assets/images/onboarding/
+    - assets/fonts/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
