--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_native_splash: ^2.4.5
   google_fonts: ^6.2.1
+  flutter_screenutil: ^5.9.3
   flutter:
     sdk: flutter
 
