--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 
 
 dependencies:
+  persistent_bottom_nav_bar: ^6.2.1
+  google_nav_bar: ^5.0.7
   flutter_launcher_icons: ^0.14.3
   flutter_svg: ^2.0.17
   flutter_native_splash: ^2.4.5
