add edit profile images to assets folder and add the path of it to app images file and add path of rsit_profilrs into pubspec.ymal

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
     - assets/icons/
     - assets/images/onboarding/
     - assets/images/home/
+    - assets/images/edit_profile/
     - assets/images/cart/
     - assets/images/leaderboard/
     - assets/images/result/
