--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
     - assets/images/edit_profile/
     - assets/images/cart/
     - assets/images/leaderboard/
+    - assets/images/notifications/
     - assets/images/result/
     - assets/images/settings/
     - assets/fonts/
