--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   flutter_native_splash: ^2.4.5
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
+  flick_video_player: ^0.9.0
+  video_player: ^2.9.5
+  wakelock_plus: ^1.3.1
   flutter_bloc: ^9.1.0
   flutter:
     sdk: flutter
