--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flick_video_player: ^0.9.0
   video_player: ^2.9.5
   wakelock_plus: ^1.3.1
+  dio: ^5.7.0
   flutter_bloc: ^9.1.0
   flutter:
     sdk: flutter
