--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   video_player: ^2.9.5
   wakelock_plus: ^1.3.1
   dio: ^5.7.0
+  pretty_dio_logger: ^1.4.0
   flutter_bloc: ^9.1.0
   flutter:
     sdk: flutter
