--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   wakelock_plus: ^1.3.1
   dio: ^5.7.0
   pretty_dio_logger: ^1.4.0
+  dartz: ^0.10.1
   flutter_bloc: ^9.1.0
   flutter:
     sdk: flutter
