--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   dartz: ^0.10.1
   flutter_bloc: ^9.1.0
+  shared_preferences: ^2.5.3
+  flutter_secure_storage: ^9.2.4
   flutter:
     sdk: flutter
 
