--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dartz: ^0.10.1
   flutter_bloc: ^9.1.0
   shared_preferences: ^2.5.3
+  skeletonizer: ^1.4.3
   flutter_secure_storage: ^9.2.4
   flutter:
     sdk: flutter
