--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   skeletonizer: ^1.4.3
   cached_network_image: ^3.4.1
   flutter_secure_storage: ^9.2.4
-  webview_flutter: ^4.11.0
+  url_launcher: ^6.3.1
+  pay_with_paymob: ^1.4.0
   flutter:
     sdk: flutter
 
