--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   wakelock_plus: ^1.3.1
   dio: ^5.7.0
   pretty_dio_logger: ^1.4.0
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.0+1
   dartz: ^0.10.1
   flutter_bloc: ^9.1.0
   shared_preferences: ^2.5.3
